include_HEADERS=../include
lib_LTLIBRARIES=libmogilefs++.la

libmogilefs___la_SOURCES=libmogilefs.cpp
libmogilefs___la_LDFLAGS=@LDFLAGS@ -version-info 0:1:0
libmogilefs___la_CFLAGS=@CFLAGS@ @INCLUDE_DIR@ -fPIC
libmogilefs___la_CXXFLAGS=@CXXFLAGS@ @INCLUDE_DIR@ @SOCKETCPP_CFLAGS@ @CURL_CFLAGS@ @PCRECPP_CFLAGS@
libmogilefs___la_LIBADD=@CURL_LIBS@ @PCRECPP_LIBS@ @SOCKETCPP_LIBS@
